# Intellifont

./: .gitignore  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: security.yml
Rust/font-resolver/: .gitignore  COMMAND_TESTING.md  Cargo.toml  PRODUCTION_READINESS.md  build.rs  cleanup.bat  final_test.bat  fix_files.bat  robust_test.ps1  run_all_test.bat  test-complete.bat  test-enhanced.bat  test_all.bat  test_all_commands.ps1
Rust/font-resolver/bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  intellifont-engine-0.1.0.tgz  package-lock.json  package.json  setup.js  stress-test.js  verify-launch.js  visual-id-prototype.js
Rust/font-resolver/bindings/node/src/: lib.rs
Rust/font-resolver/crates/font-acquisition/: Cargo.toml
Rust/font-resolver/crates/font-acquisition/src/: lib.rs
Rust/font-resolver/crates/font-cache/: Cargo.toml
Rust/font-resolver/crates/font-cache/src/: lib.rs
Rust/font-resolver/crates/font-compressor/: Cargo.toml
Rust/font-resolver/crates/font-compressor/src/: lib.rs
Rust/font-resolver/crates/font-core/: Cargo.toml
Rust/font-resolver/crates/font-core/src/: lib.rs
Rust/font-resolver/crates/font-glyph/: Cargo.toml
Rust/font-resolver/crates/font-glyph-db/: Cargo.toml
Rust/font-resolver/crates/font-glyph-db/src/: lib.rs
Rust/font-resolver/crates/font-glyph/src/: lib.rs
Rust/font-resolver/crates/font-license/: Cargo.toml
Rust/font-resolver/crates/font-license/src/: lib.rs
Rust/font-resolver/crates/font-normalizer/: Cargo.toml
Rust/font-resolver/crates/font-normalizer/src/: lib.rs
Rust/font-resolver/crates/font-parser/: Cargo.toml
Rust/font-resolver/crates/font-parser/src/: lib.rs
Rust/font-resolver/crates/font-resolver/: Cargo.toml
Rust/font-resolver/crates/font-resolver/src/: lib.rs
Rust/font-resolver/crates/font-scanner/: Cargo.toml
Rust/font-resolver/crates/font-scanner/src/: lib.rs
Rust/font-resolver/crates/font-setup/: Cargo.toml
Rust/font-resolver/crates/font-setup/src/: lib.rs
Rust/font-resolver/crates/font-similarity/: Cargo.toml
Rust/font-resolver/crates/font-similarity/src/: lib.rs
Rust/font-resolver/crates/font-sources/: Cargo.toml
Rust/font-resolver/crates/font-sources/src/: lib.rs
Rust/font-resolver/crates/font-updater/: Cargo.toml
Rust/font-resolver/crates/font-updater/src/: lib.rs
Rust/font-resolver/crates/font-visual-id/: Cargo.toml
Rust/font-resolver/crates/font-visual-id/src/: lib.rs
Rust/font-resolver/crates/font-web-db/: Cargo.toml
Rust/font-resolver/crates/font-web-db/src/: lib.rs
Rust/font-resolver/data/: font_database.json  seed_fonts.json  update_manifest.json
Rust/font-resolver/examples/cli/: Cargo.toml
Rust/font-resolver/examples/cli/src/: main.rs
Rust/font-resolver/examples/comprehensive-test/: Cargo.toml
Rust/font-resolver/examples/comprehensive-test/src/: main.rs
Rust/font-resolver/examples/full-test/: Cargo.toml
Rust/font-resolver/examples/full-test/src/: main.rs
Rust/font-resolver/examples/node-demo/: test-suggestions.js
Rust/font-resolver/examples/resolver-test/: Cargo.toml
Rust/font-resolver/examples/resolver-test/src/: main.rs
Rust/font-resolver/examples/success-test/: Cargo.toml
Rust/font-resolver/examples/success-test/src/: main.rs
Rust/font-resolver/tests/: integration_tests.rs
extension/: background.js  content.js  manifest.json  overlay.css  popup.js
extension-firefox/: content.js  manifest.json  popup.html
extension-firefox/lib/: matcher.js
extension/lib/: canvas-dna.js  image-pipeline.js
