[workspace]
members = [
    "crates/font-core",
    "crates/font-normalizer",
    "crates/font-parser",
    "crates/font-scanner",
    "crates/font-resolver", # This is font-resolver-engine
    "crates/font-cache",
    "crates/font-setup",
    "crates/font-license",
    "crates/font-sources",
    "crates/font-web-db",
    "crates/font-compressor",
    "crates/font-acquisition",
    "crates/font-similarity",
    "crates/font-updater",
    "bindings/node",
    "examples/cli",
    "examples/comprehensive-test",
    "examples/full-test",
    "examples/resolver-test",
    "examples/success-test",
]

resolver = "2" 

[package]
name = "font-resolver-workspace"
version = "0.1.0"
edition = "2021"
build = "build.rs"  # THIS TELLS CARGO TO RUN build.rs

[lib]  # ADD THIS SECTION
name = "font_resolver_workspace"
path = "src/lib.rs"

# Build dependencies
[build-dependencies]
chrono = "0.4"
serde_json = "1.0"
bincode = "1.3"


[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3