[package]
name = "font-acquisition"
version = "0.1.0"
edition = "2021"

[dependencies]
font-core = { path = "../font-core" }
font-compressor = { path = "../font-compressor" }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
indicatif = "0.17"
dirs = "5.0"
regex = "1.10"