# crates/font-compressor/Cargo.toml
[package]
name = "font-compressor"
version = "0.1.0"
edition = "2021"

[dependencies]
font-core = { path = "../font-core" }
brotli = "3.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
walkdir = "2.5"
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
internet = ["reqwest", "tokio"]