[package]
name = "font-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
font-core = { path = "../font-core" }
font-compressor = { path = "../font-compressor" }
font-acquisition = { path = "../font-acquisition" }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# semver = "1.0"  # REMOVE THIS LINE - it's not used
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
futures-util = { version = "0.3", features = ["std", "async-await"] }