[package]
name = "font-web-db"
version = "0.1.0"
edition = "2021"

[dependencies]
font-core = { path = "../font-core" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
flate2 = "1.0"

[features]
default = ["minimal-db"]
minimal-db = []  # Use minimal embedded database
embedded-db = []  # Use full embedded database (requires web_fonts.bin)
download = ["reqwest", "tokio"]  # Enable downloading fonts