[package]
name = "font-resolver-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fr"
path = "src/main.rs"

[dependencies]
font-core = { path = "../../crates/font-core" }
font-normalizer = { path = "../../crates/font-normalizer" }
font-resolver-engine = { path = "../../crates/font-resolver" }
font-cache = { path = "../../crates/font-cache" }
font-setup = { path = "../../crates/font-setup" }
font-scanner = { path = "../../crates/font-scanner" }
font-license = { path = "../../crates/font-license" }
font-compressor = { path = "../../crates/font-compressor" }
font-similarity = { path = "../../crates/font-similarity" }
font-acquisition = { path = "../../crates/font-acquisition" }
font-updater = { path = "../../crates/font-updater" }
font-web-db = { path = "../../crates/font-web-db" }

clap = { version = "4.0", features = ["derive", "env", "unicode"] }
directories = "5.0.1"
toml = "0.8"
colored = "2.0"
indicatif = "0.17"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", optional = true }

[features]
default = []
download = ["reqwest"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size
panic = "abort"